...
        return AlertDialog(
          title: const Text('Selecciona una subcategoría'),
          content: SingleChildScrollView(
            child: Column(
              children: <Widget>[
                ListTile(
                  title: const Text('Edificio'),
                  onTap: () {
                    updateSubCategory('Edificio');
                    updateCategory('Tipo de Propiedad');
                    Navigator.of(context).pop();
                  },
                ),
                ListTile(
                  title: const Text('Casa'),
                  onTap: () {
                    updateSubCategory('Casa');
                    updateCategory('Tipo de Propiedad');
                    Navigator.of(context).pop();
                  },
                ),
...
                    updateSubCategory('PentHouse');
                    updateCategory('Tipo de Propiedad');
                    Navigator.of(context).pop();
                  },
                ),
                ListTile(
                  title: const Text('Planta'),
                  onTap: () {
                    updateSubCategory('Planta');
                    updateCategory('Tipo de Propiedad');
                    Navigator.of(context).pop();
                  },
                ),
...
        return AlertDialog(
          title: const Text('Selecciona una subcategoría'),
          content: SingleChildScrollView(
            child: Column(
              children: <Widget>[
                ListTile(
                  title: const Text('Grande'),
                  onTap: () {
                    updateSubCategory('Big');
                    updateCategory('Tamaño');
                    Navigator.of(context).pop();
                  },
                ),
                ListTile(
                  title: const Text('Mediano'),
                  onTap: () {
                    updateSubCategory('Medium');
                    updateCategory('Tamaño');
                    Navigator.of(context).pop();
                  },
                ),
                ListTile(
                  title: const Text('Pequeño'),
                  onTap: () {
                    updateSubCategory('Small');
                    updateCategory('Tamaño');
                    Navigator.of(context).pop();
                  },
                ),
...
                      borderSide: const BorderSide(
                        color: Color(0xFFc2c2c2),
                        width: 1.2,
                      ),
                    ),
                    contentPadding: const EdgeInsets.symmetric(horizontal: 20),
                    labelText: 'Precio',
                  ),
                ),
                const Text('Ingrese el precio < a:'),
                TextField(
                  controller: searchController2,
                  keyboardType: TextInputType.number,
...
                TextButton(
                  onPressed: () {
                    onsSearchPressed(searchController1.text.replaceAll(',', ''),
                        searchController2.text.replaceAll(',', ''));
                    Navigator.of(context).pop();
                  },
                  child: const Text('Buscar'),
                )
              ],
            ),
          ),
        );
      },
...
